section title text shadow

--- a/css/style.css
+++ b/css/style.css
@@ -178,6 +178,7 @@ hr.line-spacer {
 	text-align: center;
 	text-transform: uppercase;
 	color: #22A39F;
+	text-shadow: 3px 3px #D3D3D3;
 	margin-top: 100px;
 }
 .title1 {
