--- a/css/style.css
+++ b/css/style.css
@@ -294,7 +294,7 @@ hr.line-spacer {
 }
 #heading_2{
 	font-family: "Century Gothic";
-	font-size:1em;
+	font-size:36px;
 }
 #downward3{
 	margin-top: 0px;
