--- a/css/style.css
+++ b/css/style.css
@@ -20,7 +20,7 @@ body {
 	font-weight: 500 !important;
 	letter-spacing: 1.2px !important;
 	border: 3px solid #fff;
-	border-radius: 50%;
+	border-radius: 10px;
 	padding: 0.2em;
 }
 .collapse-btn{
