--- a/css/style.css
+++ b/css/style.css
@@ -15,13 +15,12 @@ body {
 	display: inline-block;
 	text-decoration: none !important;
 	color: #fff !important;
-	font-size: 23px !important;
-	float: left;
-	font-weight: 500 !important;
+	font-size: 15px !important;
+	margin-top:3px;
 	letter-spacing: 1.2px !important;
 	border: 3px solid #fff;
 	border-radius: 10px;
-	padding: 0.2em;
+	padding: 0.5em;
 }
 .collapse-btn{
 	display: none !important;
@@ -42,11 +41,19 @@ body {
 	margin-top: 1em;
 }
 
-.collapse-bar a{
-	font-size: 24px;
-}
 .navbar-toggle, .icon-bar {
 	 border:2px solid white;
+}
+
+.navbar-default {
+    background-color: #afced8 !important;
+    border-color: #5c8c9c !important;
+}
+.nav > li > a {
+    color: #ecf0f1 !important;
+}
+.nav > li > a:hover {
+    color: #000 !important;
 }
 /***********Home Page***********/
 #main_page{
@@ -231,6 +238,15 @@ hr.line-spacer {
 	padding: 30px 0.8em 50px 0.8em;
 	margin: 0.3em;
 	background-color: #3DB1B1;
+}
+@media (max-width: 800px) {
+    .flexbox {
+        display: block;
+        .box{
+        width: 100%;
+        margin: 0 0 10px 0;
+        }
+    }
 }
 .box .content{
 	text-align: center;
